# oh_brother

./: .gitignore  README.md  create_dummy_data.py  debug_serializer.py  main.py  portfolio.md  pyproject.toml  test_scraper.py
config/: celery.py  settings.py  urls.py
docs/: database_schema.md  plan.md  portfolio.md  wbs.md  wireframe_ref.md
docs/TIL/: my_TIL_template.txt
docs/TIL/0808-0809/: 01_database_modeling.md  02_security_env_vars.md  03_celery_async_processing.md  03_direct_sql_querying.md  04_dynamic_text_extraction.md
docs/TIL/0811/: 06_celery_async_task.md
docs/reviews/0804/: 0806.md
docs/reviews/0811/: 0808-0809.md  0810.md  0811.md
events/: models.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_sourcedocument_source_url_alter_church_website_and_more.py  0003_remove_sourcedocument_source_url_and_more.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  Calendar.css  Calendar.jsx
parsers/: get_notice.py  processor.py  scraper.py  tasks.py
